# inference-bazaar

./: .gitignore  ARCHITECTURE.md  BLUEPRINT.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  blueprint.toml  harness.toml  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json
.evolve/: audit-status.md  skill-runs.jsonl
.evolve/critical-audit/2026-06-12T02:16:28Z/: findings.jsonl  manifest.json  summary.md
.evolve/critical-audit/2026-06-14T01:20:02Z/: findings.jsonl  manifest.json  summary.md
.github/workflows/: ci.yml  deploy-app.yml  release.yml
app/: DESIGN.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
app/public/: _headers
app/src/: main.tsx  styles.css  vite-env.d.ts
app/src/components/: ApiKeyMint.tsx  CodeBlock.tsx  DepthChart.tsx  NetworkSwitcher.tsx  Orderbook.tsx  PageHeader.tsx  RouteError.tsx  Shell.tsx  TangleLogo.tsx  UsageProjection.tsx  WalletButton.tsx  charts.tsx  ui.tsx
app/src/lib/: api.ts  browser-cache.ts  capabilities.ts  format.ts  layer2-settle.check.ts  logos.tsx  mock.ts  nbbo-live.check.ts  nbbo-sor.check.ts  privacy.ts  router.check.ts  router.ts  settlement.ts  spend-key.ts  theme.ts  trade.tsx  types.ts  venues.ts
app/src/pages/: Activity.tsx  Buy.tsx  Deploy.tsx  Developer.tsx  Home.tsx  Markets.tsx  ModelMarket.tsx  OperatorRegister.tsx  Operators.tsx  Portfolio.tsx  Sell.tsx
app/src/providers/: web3.tsx
contracts/: foundry.toml  remappings.txt
contracts/script/: Deploy.s.sol  DeployTempo.s.sol
contracts/src/: InferenceBazaarBSM.sol  InferenceBazaarSettlement.sol  SurplusBSM.sol  SurplusSettlement.sol
contracts/src/dev/: Mocks.sol
contracts/src/interfaces/: ISP1Verifier.sol
contracts/test/: Base.t.sol  Batch.t.sol  Bsm.t.sol  Eip712Parity.t.sol  ErrorPaths.t.sol  Redemption.t.sol  Replay.t.sol  Resale.t.sol  Settlement.t.sol  Spend.t.sol  Timelock.t.sol
contracts/test/invariant/: HandlerSmoke.t.sol  SettlementHandler.sol  Solvency.invariant.t.sol
crates/matcher/: Cargo.toml
crates/matcher/src/: consensus.rs  lib.rs
crates/orderbook/: Cargo.toml
crates/orderbook/src/: book.rs  engine.rs  lib.rs  native.rs  types.rs
crates/orderbook/tests/: matching.rs
crates/settlement/: Cargo.toml
crates/settlement-core/: Cargo.toml
crates/settlement-core/src/: lib.rs
crates/settlement/examples/: e2e_anvil.rs  gen_outbox.rs  sign_fixture.rs
crates/settlement/src/: chain.rs  lib.rs
crates/settlement/tests/: parity.rs
deploy/: base-sepolia.sh  blueprint-definition.sepolia.toml  blueprint-definition.toml  blueprint-metadata.json  deploy-inference-bazaar.sh  deploy-surplus.sh  gen-resell-operator.sh  onboard-operator.sh
deploy/hetzner/: arti.toml  inference-bazaar-arti.service  inference-bazaar-blueprint-runtime.service  inference-bazaar-mm-sidecar.service  inference-bazaar-quoter.service  inference-bazaar-quoter.timer  inference-bazaar-tick-keeper@.service  inference-bazaar-tick-keeper@.timer  inference-bazaar-usdc-venue.service  inference-bazaar3-blueprint-runtime.service  publish-onion.sh  seed.sh  surplus-arti.service  surplus-blueprint-runtime.service  surplus-mm-sidecar.service  surplus-quoter.service  surplus-quoter.timer  surplus-tick-keeper@.service  surplus-tick-keeper@.timer  surplus-usdc-venue.service  surplus3-blueprint-runtime.service  tick-keeper.sh
docs/: OPERATOR_ONBOARDING.md  PAYMENT-ARCHITECTURE.md  ROUTER-INTEGRATION-SCOPE.md  testnet-release.md
docs/examples/: api-key-spend.md  spend-a-credit.md
docs/ops/: owner-timelock.md
docs/specs/: architecture.md  bsm-fraud-slash.md  redemption-debit.md  shared-clob.md  spend-rail.md
operator/: Cargo.toml
operator/src/: clob.rs  config.rs  credits.rs  http.rs  inference.rs  lib.rs  main.rs  market.rs  mesh.rs  metrics.rs  ratelimit.rs  redeem.rs  sidecar.rs  spend.rs  venue.rs
operator/src/clob/: config.rs  driver.rs  http.rs  mod.rs  net.rs  peer.rs  pool.rs  wire.rs
operator/tests/: clob_e2e.rs  market.rs  mesh_clob.rs
scripts/: _keys.mjs  blueprint-smoke.sh  clob-e2e-live.mjs  clob-e2e.mjs  clob-e2e.sh  clob-gossip-probe.mjs  clob-presim.mjs  devnet-up.sh  e2e-firm-buy.mjs  e2e-redeem.mjs  e2e-smoke.sh  gateway-multilot-e2e.mjs  gateway-multilot-e2e.sh  layer2-split-settle-e2e.sh  nbbo-sor-e2e.sh  prove-batch.sh  set-release-sha.sh  settlement-e2e.sh  smoke-resell-router.sh  spend-e2e.mjs  spend-e2e.sh  spend-live.mjs  stub-openai.mjs  timelock-anvil.sh  topup-keepers.mjs
zk/: Cargo.toml
zk/lib/: Cargo.toml
zk/lib/src/: lib.rs
zk/program/: Cargo.toml
zk/program/src/: main.rs
zk/prover/: Cargo.toml  build.rs
zk/prover/src/: main.rs
