# Rust workspace for the Surplus blueprint (operator + orderbook). The TS
# packages live under packages/ and are managed by pnpm; these are independent
# toolchains rooted at the same repo.
[workspace]
resolver = "2"
members = ["crates/orderbook", "crates/settlement-core", "crates/settlement", "operator"]

# blueprint-sdk (alpha) pulls core2 transitively via libp2p-core -> multihash,
# and core2 was yanked from crates.io. Point at the same git copy the reference
# blueprints use so the graph resolves. Unused (a harmless warning) until the
# operator's `blueprint` feature is on.
[patch.crates-io]
core2 = { git = "https://github.com/tangle-network/core2", branch = "master" }
