# Surplus operator.
#
# One library (the venue: open orderbook + sidecar quoting + settlement intents)
# driven by two binaries:
#   - `surplus-operator-lite`: HTTP-only venue, no Tangle substrate. Local e2e +
#     first testnet smoke; stable deps only, builds fast.
#   - `surplus-operator` (feature `blueprint`): the full BlueprintRunner that
#     registers on-chain via blueprint-sdk and drives the SAME venue from job
#     handlers (workflow_tick, list_instrument, status). The alpha SDK is pulled
#     ONLY when the `blueprint` feature is on, so the lite path stays light.
[package]
name = "surplus-operator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "surplus_operator"
path = "src/lib.rs"

[[bin]]
name = "surplus-operator-lite"
path = "src/main.rs"

[[bin]]
name = "surplus-operator"
path = "src/bin/blueprint.rs"
required-features = ["blueprint"]

# The consumer-side spend gateway: an OpenAI-compatible proxy that holds the
# session key and signs spend-channel vouchers invisibly. Run locally for zero
# trust in Surplus, or hosted for convenience.
[[bin]]
name = "surplus-gateway"
path = "src/bin/gateway.rs"

[dependencies]
surplus-orderbook = { path = "../crates/orderbook" }
surplus-settlement = { path = "../crates/settlement" }
surplus-matcher = { path = "../crates/matcher" }
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `socks` enables PRIVACY_MODE=tor: outbound inference calls tunnel through Arti's
# SOCKS5 proxy (socks5h, so .onion hostnames resolve inside Tor).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "socks", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
async-trait = "0.1"

# On-chain blueprint deps — pulled only with `--features blueprint`.
blueprint-sdk = { version = "=0.2.0-alpha.8", features = ["std", "tangle", "macros"], optional = true }
alloy-sol-types = { version = "1", optional = true }

# PKI gossip mesh for the shared CLOB — pulled only with `--features mesh`.
# Same versions the lock already resolves via blueprint-sdk, so one copy of
# everything (alloy-primitives is unified at one version — Address IS Address).
blueprint-networking = { version = "=0.2.0-alpha.7", optional = true }
blueprint-crypto = { version = "=0.2.0-alpha.7", features = ["k256"], optional = true }
libp2p = { version = "0.54.1", default-features = false, optional = true }
crossbeam-channel = { version = "0.5", optional = true }
# Same bincode the mesh receivers decode with (varint envelope — see mesh.rs).
bincode = { version = "1.3", optional = true }

[features]
default = []
blueprint = ["dep:blueprint-sdk", "dep:alloy-sol-types"]
# Direct on-chain settlement submission (settleFills) from /settlement/flush.
chain = ["surplus-settlement/chain"]
# blueprint-networking transport for the shared CLOB: PKI-gated gossip where
# only the whitelisted bonded operator set can even handshake.
mesh = [
    "dep:blueprint-networking",
    "dep:blueprint-crypto",
    "dep:libp2p",
    "dep:crossbeam-channel",
    "dep:bincode",
]

[[test]]
name = "mesh_clob"
required-features = ["mesh"]
