# SP1 batch-validity workspace. Deliberately SEPARATE from the root workspace:
# sp1-sdk and blueprint-sdk cannot coexist in one dependency graph (c-kzg
# version conflict — same split tnt-core/packages/migration-claim uses).
#
# Build:
#   cd zk/program && cargo prove build          # guest ELF (succinct toolchain)
#   cd zk && cargo build --release -p inference-bazaar-batch-prover
# Prove:
#   SP1_PROVER=cpu ./target/release/prove --fills outbox.json --chain-id 3799 \
#       --contract 0x... --mode groth16 --out proof.json
[workspace]
resolver = "2"
members = ["lib", "prover"]
exclude = ["program"]

[workspace.dependencies]
inference-bazaar-settlement-core = { path = "../crates/settlement-core" }
serde = { version = "1", features = ["derive"] }
