[package]
name = "surplus-matcher"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deterministic epoch-batch matcher for the shared CLOB: a canonical-ordered set of signed orders -> BatchFills + fillsHash, reproducible bit-for-bit by peers (settleBatchAttested) and an SP1 circuit (settleBatchProven)."

[lib]
name = "surplus_matcher"
path = "src/lib.rs"

[dependencies]
surplus-orderbook = { path = "../orderbook" }
surplus-settlement-core = { path = "../settlement-core" }
# SignedOrder (order + trader signature). The attested settlement path does NOT
# verify trader signatures on-chain — the quorum vouches for them — so proposals
# carry signatures and verify_proposal checks every one. Light: no chain feature.
surplus-settlement = { path = "../settlement" }
