[package]
name = "inference-bazaar-matcher"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deterministic epoch-batch matcher for the shared CLOB: a canonical-ordered set of signed orders -> BatchFills + fillsHash, reproducible bit-for-bit by peers (settleBatchAttested) and an SP1 circuit (settleBatchProven)."

[lib]
name = "inference_bazaar_matcher"
path = "src/lib.rs"

[dependencies]
# The matching kernel reuses the no_std orderbook engine and the no_std EIP-712
# core, so `match_epoch` itself builds in the SP1 zkVM guest (proven path runs
# the match in-circuit).
inference-bazaar-orderbook = { path = "../orderbook", default-features = false }
inference-bazaar-settlement-core = { path = "../settlement-core", default-features = false }
# The consensus module (proposal/verify/aggregate) is std-only: it carries full
# SignedOrders (order + trader signature) and runs off-chain on the operator.
# The attested settlement path does NOT verify trader signatures on-chain — the
# quorum vouches for them — so verify_proposal checks every one. Light: no chain.
inference-bazaar-settlement = { path = "../settlement", optional = true }

[features]
default = ["std"]
# `std` enables the consensus layer (proposer election, peer verification,
# attestation aggregation) the operator runs. The matching kernel + the input-set
# commitment are no_std so the SP1 guest can import this crate directly.
std = ["dep:inference-bazaar-settlement", "inference-bazaar-orderbook/std", "inference-bazaar-settlement-core/std"]
