[package]
name = "surplus-orderbook"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Open orderbook for inference-token credit markets. A native, deterministic, verifiable price-time-priority engine behind a MatchingEngine seam, plus a local/remote BookClient seam for the shared book."

[lib]
name = "surplus_orderbook"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
# Only for the BookClient location seam (object-safe async). The matching kernel
# (NativeBook) stays sync, integer-only, and dependency-light on purpose — it is
# the part peers re-execute and the SP1 circuit reproduces.
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
