# Host: builds the guest ELF (sp1-helper build.rs), executes or proves batches,
# and emits proof.json consumable by SurplusSettlement.settleBatchProven.
[package]
name = "surplus-batch-prover"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "prove"
path = "src/main.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = { version = "6.1.0", features = ["blocking"] }
surplus-settlement-core = { workspace = true }
surplus-batch-types = { path = "../lib" }
surplus-settlement = { path = "../../crates/settlement" }
serde = { workspace = true }
serde_json = "1"
anyhow = "1"
hex = "0.4"

[build-dependencies]
sp1-helper = "6.1.0"
